# fft2d-cuda

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh  create_animation.py  entrypoint.sh  fft2d_cuda.cu  fft2d_cuda.h  image_processing.cpp  image_processing.h  main.cpp
config_template/: iam_cloudwatch.json  iam_s3.json  lambda_submit_batch.py
fft2d_example/: performance_report.txt
tests/: CMakeLists.txt  test_fft.cu
